# Astrore

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
deploy/: install.sh  start-agent.bat  start-agent.sh
extensions/i18n-translator/: manifest.json  server.py
extensions/qqbot-mcp/: manifest.json  server.py
registry/: example-entry.json  index.json
scripts/: validate-registry.mjs
src/: AiAssistant.tsx  App.tsx  ManagementViews.tsx  aiProviders.ts  bridge.ts  consoleHighlighter.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mcp_client.rs
